--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ###################
+# Visual Studio 2015/2017 cache/options directory
+###################
+.vs/
+
+###################
 # compiled source #
 ###################
 *.com
