--- a/WebUnitTestTanner/Web.config
+++ b/WebUnitTestTanner/Web.config
@@ -9,8 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
- <add key="UnobtrusiveJavaScriptEnabled2" value="true" />  </appSettings>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
