--- a/WebUnitTestTanner/Web.config
+++ b/WebUnitTestTanner/Web.config
@@ -12,6 +12,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+     <add key="UnobtrusiveJavaScriptEnabled1" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
